[gd_scene load_steps=15 format=3 uid="uid://bnhx88uhnvoup"]

[ext_resource type="PackedScene" uid="uid://bnwo40ymy21k8" path="res://Enemies/enemy.tscn" id="1_dsgia"]
[ext_resource type="Script" path="res://Enemies/target_enemy.gd" id="2_0f3pn"]
[ext_resource type="Texture2D" uid="uid://d2tuo7excm02y" path="res://assets/target_sheet.png" id="3_neplv"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="4_vhquc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ohkm"]
atlas = ExtResource("3_neplv")
region = Rect2(100, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbimh"]
atlas = ExtResource("3_neplv")
region = Rect2(200, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_os1e1"]
atlas = ExtResource("3_neplv")
region = Rect2(300, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbhbw"]
atlas = ExtResource("3_neplv")
region = Rect2(500, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_56fwu"]
atlas = ExtResource("3_neplv")
region = Rect2(600, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv4xe"]
atlas = ExtResource("3_neplv")
region = Rect2(0, 0, 100, 142)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pn6m"]
atlas = ExtResource("3_neplv")
region = Rect2(400, 0, 100, 142)

[sub_resource type="SpriteFrames" id="SpriteFrames_gva1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ohkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbimh")
}, {
"duration": 10000.0,
"texture": SubResource("AtlasTexture_os1e1")
}],
"loop": false,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbhbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56fwu")
}, {
"duration": 10000.0,
"texture": SubResource("AtlasTexture_vv4xe")
}],
"loop": false,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pn6m")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiurw"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdn55"]
size = Vector2(20, 32)

[node name="1TargetEnemy" instance=ExtResource("1_dsgia")]
script = ExtResource("2_0f3pn")

[node name="AnimatedSprite2D" parent="Anchor" index="0"]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_gva1t")
animation = &"bank_right"
autoplay = ""

[node name="FlameAnimatedSprite2D" parent="Anchor" index="1"]
position = Vector2(0, -30)
scale = Vector2(0.33, 0.33)

[node name="StatsComponent" parent="." index="2"]
health = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("RectangleShape2D_wiurw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("RectangleShape2D_fdn55")
debug_color = Color(0.847059, 0.34902, 0.388235, 0.419608)

[node name="ScoreComponent" parent="." index="13"]
adjust_amount = 10
adjust_target_amount = 1

[node name="BorderBounceComponent" type="Node" parent="." index="14" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("4_vhquc")
margin = 12
actor = NodePath("../Anchor")
move_component = NodePath("../MoveComponent")
